<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Главная-->
    <string name="lastDrive">Последние проезды</string>
    <string name="lastCoast">Последние обеды</string>
    <string name="addForPassage">Проезд</string>
    <string name="add">Обед</string>

    <string name="date">Дата:</string>
    <string name="monthAll">На обеды за месяц:</string>
    <string name="monthDrive">На дорогу за месяц:</string>
    <string name="monthEat">На еду:</string>
    <string name="app_name">Мои расходы</string>
    <string name="ok">Ok</string>
    <string name="cancel">Отмена</string>
    <string name="drink">Напиток:</string>
    <string name="prompt">prompt</string>
    <string name="garnish">Гарнир:</string>
    <string name="meat">Мясо:</string>
    <string name="price">Цена:</string>
    <string name="expectedPrice">Ожид. цена:</string>

    <!--Добавление продукта-->
    <string name="productPrice">Цена продукта:</string>
    <string name="productName">Имя продукта:</string>
    <string name="typeProduct">Тип продукта:</string>
    <string name="salad">Салаты</string>
    <string name="flour">Мучные изделия</string>
    <!---->

    <!--Добавление поездки-->
    <string name="driveBus">Атобус:</string>
    <!---->

    <!--Menu-->
    <string name="addProduct">Добавить продукт</string>
    <string name="viewLunch">Просмотреть обеды</string>
    <string name="viewDrive">Просмотреть поездки</string>
    <string name="viewCoast">Просмотреть эл. покупок</string>
    <string name="exit">Выход</string>
    <!---->

    <!--Date Dialog-->
    <string name="lastMonth">За месяц</string>
    <string name="lastDay">За день</string>
    <!---->

    <!--List Report-->
    <string name="lunchFor">Обеды за</string>
    <string name="driveFor">На дорогу за</string>
    <!---->

    <!--Проичие константы-->
    <string name="currencyPostfix">руб</string>
    <!---->

</resources>
