<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/linerLayoutVertDef"
        >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  style="@style/linerLayoutHorDef"
            >
        <TextView
                style="@style/lblTitle"
                android:text="@string/date"
                />
        <TextView
                style="@style/dscrTitle"
                android:text="08.03.2011"
                />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  style="@style/linerLayoutHorDef"
            >
        <TextView
                style="@style/lbl"
                android:text="@string/monthAll"
                />
        <TextView
                android:id="@+id/sumMonth"
                style="@style/dscr"
                android:text="3500"
                />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  style="@style/linerLayoutHorDef"
            >
        <TextView
                style="@style/lbl"
                android:text="@string/monthDrive"
                />
        <TextView
                style="@style/dscr"
                android:text="1000"
                />
    </LinearLayout>

    <Button
            android:id="@+id/addCoast"
            style="@style/oneBtn"
            android:text="@string/add"
            />

    <Button
            android:id="@+id/addForPassage"
            style="@style/oneBtn"
            android:text="@string/addForPassage"
            android:onClick="addForPassageOnClick"
            />


    <ListView
            android:id="@+id/coastList"
            style="@style/listViewDef"
            />
</LinearLayout>
