<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/linerLayoutVertDef"
        >

    <TextView
            style="@style/lbl"
            android:text="@string/productName"
        />
    <EditText
            android:id="@+id/productName"
            style="@style/edtDec"
            android:text="Example"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  style="@style/linerLayoutHorDef"
            >
        <TextView
                style="@style/lbl"
                android:text="@string/typeProduct"
                />
        <Spinner
                android:id="@+id/spinnerProductType"
                style="@style/spinnerDef"
                />
    </LinearLayout>

    <Button
            style="@style/twoBtn"
            android:text="@string/add"
            android:onClick="onClickAddCoastItem"
            />
</LinearLayout>