<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
        >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/coastDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18px"
            android:text="@string/date"
            />
        <TextView
                android:id="@+id/coastDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:layout_marginLeft="10px"
                android:text="09.03.2012"
                />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:text="@string/drink"
                />
        <Spinner
                android:id="@+id/spinnerDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:drawSelectorOnTop = "true"
                android:prompt = "@string/prompt"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:text="@string/garnish"
                />
        <Spinner
                android:id="@+id/spinnerGarnish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:drawSelectorOnTop = "true"
                android:prompt = "@string/prompt"
                />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:text="@string/meat"
                />
        <Spinner
                android:id="@+id/spinnerMeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:drawSelectorOnTop = "true"
                android:prompt = "@string/prompt"
                />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:text="@string/expectedPrice"
                />
        <TextView
                android:id="@+id/expectedPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:layout_marginLeft="10px"
                android:text="price"
                />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:text="@string/price"
            />
        <EditText
                android:id="@+id/price"
                android:layout_width="100px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:inputType="numberDecimal"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="right"
            >
        <Button
                android:id="@+id/addCoastCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_gravity="right"
                />
        <Button
                android:id="@+id/addCoastOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_gravity="right"
                />
    </LinearLayout>

</LinearLayout>